# tcpflowgen

./: .gitignore  CMakeLists.txt  README.md  config.py  data.py  main.py  model.py  requirements.txt  train.py  utils.py  vcpkg.json
.cache/clangd/index/: Decode.cpp.5DCECCB54101753B.idx  Decode.h.C1E1CDE1F4CCF047.idx  Encode.cpp.875B16AF11E7F6C6.idx  Encode.h.4832421D11B40A9E.idx  FlowExtractor.cpp.9B680053E7BF3354.idx  FlowExtractor.h.2A736BF4494D7235.idx  FlowUtils.cpp.E758AE2FCE31779C.idx  FlowUtils.h.05C879248B33F38A.idx  main.cpp.3E0B9D53EDF4D6B8.idx
include/: Decode.h  Encode.h  FlowExtractor.h  FlowUtils.h  ReportUtils.h
logs/: gen1_10epoch_data_fix_0702.json  training_log_20250630_114925.json  training_log_20250630_fulltraining.json  training_log_20250709_123340.json  training_log_20250803_061514.json  training_log_20250803_205924.json  training_log_20250805_233615.json  training_log_20250806_032054.json  training_log_20250808_174238.json  training_log_20250812_034406.json  training_log_30epoch_v1.json  training_log_final.json  training_log_finalworking.json
src/: Decode.cpp  Encode.cpp  FlowExtractor.cpp  FlowUtils.cpp  ReportUtils.cpp  main.cpp
